--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,6 +4,33 @@ html {
 *, *::after, *::before {
   box-sizing: inherit; }
 
+#mobile__menu-toggle {
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  right: 0;
+  margin: 8rem 3rem;
+  -ms-transform: rotate(90deg);
+      transform: rotate(90deg);
+  font-size: 2.5rem; }
+  #mobile__menu-toggle #close-menu {
+    display: none; }
+
+#mobile__menu {
+  display: none;
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  min-height: 100%;
+  color: green; }
+  #mobile__menu #mobile__menu-list {
+    position: fixed;
+    top: 20rem;
+    margin-left: 8rem;
+    padding: 0;
+    font-size: 3rem;
+    list-style-type: none; }
+
 * {
-  color: green;
-  background-color: blue; }
+  box-sizing: border-box; }
