--- a/scss/partials/menu.scss
+++ b/scss/partials/menu.scss
@@ -20,7 +20,7 @@
   right: 0;
   width: 100%;
   min-height: 100%;
-  color: $test;
+  color: $darkColor;
   #mobile__menu-list {
     position: fixed;
     top: 20rem;
