--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -5,6 +5,7 @@
 @import 'neat';
 @import './partials/_variables';
 @import './partials/menu.scss';
+@import './partials/hero.scss';
 
 * {
   box-sizing: border-box;
