--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -1,1 +1,8 @@
-$test: green;
+$mainColor: #f5f5f5;
+$darkColor: #032b2f;
+$highlightColor: #ff6c00;
+
+$phone: 'min-width: 375px';
+$tablet: 'min-width: 768px';
+$laptop: 'min-width: 1024px';
+$desktop: 'min-width: 1440px';
