committing my changes from earlier in the week and moving on

--- a/scss/partials/hero.scss
+++ b/scss/partials/hero.scss
@@ -1,5 +1,7 @@
-@import "bourbon";
-@import 'neat';
+// @imports just in case...
+
+// @import "bourbon";
+// @import 'neat';
 
 #hero {
   background-image: url('../images/laptop-with-plant.jpeg');
