--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -4,8 +4,8 @@
 @import 'bourbon';
 @import 'neat';
 @import './partials/_variables';
-@import './partials/menu.scss';
-@import './partials/hero.scss';
+//@import './partials/menu.scss';
+//@import './partials/hero.scss';
 
 * {
   box-sizing: border-box;
