making good progress on the hero portion and critical css. Almost ready to move on

--- a/scss/critical.scss
+++ b/scss/critical.scss
@@ -3,3 +3,4 @@
 @import './partials/_variables.scss';
 @import './partials/hero.scss';
 @import './partials/menu.scss';
+@import './partials/logo.scss';
