--- a/scss/partials/menu.scss
+++ b/scss/partials/menu.scss
@@ -8,6 +8,7 @@
   margin: 8rem 3rem;
   transform: rotate(90deg);
   font-size: 2.5rem;
+  color: $highlightColor;
   #close-menu {
     display: none;
   }
@@ -20,7 +21,10 @@
   right: 0;
   width: 100%;
   min-height: 100%;
-  color: $darkColor;
+  //color: $darkColor;
+  background-color: $darkColor;
+  opacity: 0.9;
+
   #mobile__menu-list {
     position: fixed;
     top: 20rem;
