--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -2,6 +2,9 @@ $mainColor: #f5f5f5;
 $darkColor: #032b2f;
 $highlightColor: #ff6c00;
 
+$titleFont: 'Raleway', serif;
+$bodyFont: 'Open Sans', serif;
+
 $phone: 'min-width: 375px';
 $tablet: 'min-width: 768px';
 $laptop: 'min-width: 1024px';
