--- a/css/critical.css
+++ b/css/critical.css
@@ -1,18 +1,27 @@
 #hero {
-  background-image: url("/images/laptop-with-plant.jpeg");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 96rem; }
+  height: 28rem; }
+  @media screen and (max-width: 767px) {
+    #hero {
+      background-image: url("/images/laptop-with-plant-2.jpg");
+      background-position-x: -5rem; } }
+  @media screen and (min-width: 768px) {
+    #hero {
+      background-image: url("/images/minimal-computer.jpeg"); } }
+  @media screen and (min-width: 1024px) {
+    #hero {
+      background-image: url("/images/laptop-with-notebook.jpeg"); } }
 
 #mobile__menu-toggle {
   position: fixed;
   z-index: 100;
   top: 0;
   right: 0;
-  margin: 8rem 3rem;
+  margin: 2.3rem -0.3rem;
   -ms-transform: rotate(90deg);
       transform: rotate(90deg);
-  font-size: 2.5rem;
+  font-size: 1.5rem;
   font-family: "Raleway", serif;
   color: #ff6c00; }
   #mobile__menu-toggle .mobile__menu-container {
@@ -31,8 +40,8 @@
   opacity: 0.9; }
   #mobile__menu #mobile__menu-list {
     position: fixed;
-    top: 20rem;
-    margin-left: 8rem;
+    top: 8rem;
+    margin-left: 2rem;
     padding: 0;
     font-size: 3rem;
     font-family: "Raleway", serif;
@@ -52,9 +61,11 @@
   position: absolute;
   top: 0;
   left: 0;
-  margin: 5rem; }
+  margin: 1rem; }
+  .logo__container .logo__link {
+    cursor: pointer; }
   .logo__container .logo__dark, .logo__container .logo__light {
-    height: 9rem; }
+    height: 4rem; }
 
 html {
   box-sizing: border-box; }
@@ -62,12 +73,15 @@ html {
 *, *::after, *::before {
   box-sizing: inherit; }
 
+.intro__container {
+  margin: 0.5rem auto; }
+
 .intro__container-text {
-  margin: 2rem; }
+  margin: 0 1.3rem; }
 
 .intro__text {
   margin: 0;
-  font-size: 4rem;
+  font-size: 2rem;
   font-family: "Raleway", serif; }
 
 * {
