--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -5,7 +5,7 @@ $highlightColor: #ff6c00;
 $titleFont: 'Raleway', serif;
 $bodyFont: 'Open Sans', serif;
 
-$phone: 'min-width: 375px';
+$phone: 'max-width: 767px';
 $tablet: 'min-width: 768px';
 $laptop: 'min-width: 1024px';
 $desktop: 'min-width: 1440px';
