--- a/scss/partials/logo.scss
+++ b/scss/partials/logo.scss
@@ -2,8 +2,11 @@
   position: absolute;
   top: 0;
   left: 0;
-  margin: 5rem;
+  margin: 1rem;
+  .logo__link {
+    cursor: pointer;
+  }
   .logo__dark, .logo__light {
-    height: 9rem;
+    height: 4rem;
   }
 }
