starting to add & organize below fold content

--- a/css/critical.css
+++ b/css/critical.css
@@ -36,6 +36,7 @@
   right: 0;
   width: 100%;
   min-height: 100%;
+  z-index: 2;
   background-color: #032b2f;
   opacity: 0.9; }
   #mobile__menu #mobile__menu-list {
