--- a/scss/partials/menu.scss
+++ b/scss/partials/menu.scss
@@ -25,6 +25,7 @@
   right: 0;
   width: 100%;
   min-height: 100%;
+  z-index: 2;
   //color: $darkColor;
   background-color: $darkColor;
   opacity: 0.9;
