--- a/scss/partials/headers.scss
+++ b/scss/partials/headers.scss
@@ -1,3 +1,3 @@
-.about__header, .project__header, .skills__header {
+.about__header, .project__header, .skills__header, .skills__list-group {
   font-family: $titleFont;
 }
