--- a/scss/partials/hero.scss
+++ b/scss/partials/hero.scss
@@ -1,8 +1,3 @@
-// @imports just in case...
-
-// @import "bourbon";
-// @import 'neat';
-
 //need to add media queries for the main image so it stays relatively consistent.
 
 #hero {
@@ -16,6 +11,10 @@
   @media screen and ($phone) {
     background-image: url('/images/laptop-with-plant-2.jpg');
     background-position-x: -5rem;
+  }
+  @media screen and ($medium-phone) {
+    background-image: url('/images/laptop-with-plant-2.jpg');
+    background-position-x: 0;
   }
   @media screen and ($tablet) {
     background-image: url('/images/minimal-computer.jpeg');
