--- a/scss/partials/intro.scss
+++ b/scss/partials/intro.scss
@@ -1,18 +1,44 @@
 @import 'bourbon';
 @import 'neat';
 
-.intro__container {
-  margin: 0.5rem auto;
+#intro {
+  @include outer-container;
 }
 
-.intro__container-text {
-  margin: 0 1.3rem;
+.intro__container {
+  margin: 1rem auto;
+  width: 17rem;
+  @media screen and ($medium-phone) {
+    width: 25rem;
+  }
+  @media screen and ($tablet) {
+    width: 33rem;
+  }
+  @media screen and ($laptop) {
+    width: 44rem;
+  }
 }
+
+// .intro__container-text {
+//   margin: 0 1.3rem;
+// }
 
 .intro__text {
   margin: 0;
   font-size: 2rem;
   font-family: $titleFont;
+  line-height: 3.5rem;
+  @media screen and ($medium-phone) {
+    font-size: 3rem;
+  }
+  @media screen and ($tablet) {
+    font-size: 4rem;
+    line-height: 3.4rem;
+  }
+  @media screen and ($laptop) {
+    font-size: 5.3rem;
+    line-height: 4.3rem;
+  }
 }
 
 // .intro__arrow {
@@ -24,4 +50,29 @@
 //   position: relative;
 //   bottom: 8px;
 //   left: 45%;
+// }
+
+// @media screen and ($phone) {
+//   margin: 0.5rem auto;
+// }
+// margin-left: 1rem;
+// width: 20rem;
+// @media screen and ($medium-phone), screen and ($tablet), screen and ($laptop), screen and ($desktop) {
+//   @include span-columns(6);
+//   @include shift(3);
+// }
+// @media screen and ($tablet) {
+//   @include span-columns(6);
+//   @include shift(3);
+//   //margin: 0;
+// }
+// @media screen and ($laptop) {
+//   @include span-columns(6);
+//   @include shift(3);
+//   //margin: 0;
+// }
+// @media screen and ($desktop) {
+//   @include span-columns(6);
+//   @include shift(3);
+//   //margin: 0;
 // }
