--- a/scss/partials/skills.scss
+++ b/scss/partials/skills.scss
@@ -20,7 +20,12 @@
   }
 }
 
+.skills__list-group {
+  margin: 0;
+}
+
 .skills__list {
+  margin: 0;
   list-style-type: none;
   .skills__list-item {
     font-family: $bodyFont;
