re-thinking this approach

--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -6,6 +6,7 @@
 @import './partials/_variables';
 @import './partials/headers';
 @import './partials/projects';
+@import './partials/before-after';
 // @import './partials/about-me';
 // @import './partials/skills';
 
