--- a/scss/partials/projects.scss
+++ b/scss/partials/projects.scss
@@ -6,39 +6,102 @@
   margin: 0 1.5rem;
 }
 
-figure {
-  margin: 0 auto;
-  padding: 1rem 0;
-  width: 17rem;
-  background-color: tint($highlightColor, 80%);
-  color: $darkColor;
-  @media screen and ($tablet), screen and ($laptop), screen and ($desktop) {
-    width: 33rem;
-  }
-}
-
 .project {
-  // @include row();
   @include outer-container;
 }
 
-.project__description {
-  @include span-columns(12);
-  @media screen and ($tablet), screen and ($laptop), screen and ($desktop) {
-    @include span-columns(4);
-  }
+.project__slide-container {
+  position: relative;
 }
 
-.project__image-container {
-  @include span-columns(12);
-  @media screen and ($tablet), screen and ($laptop), screen and ($desktop) {
-    @include span-columns(8);
-    @include omega();
-  }
-  .project__image {
-    width: 100%;
-  }
+.project__slide-group {
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
+
+.slide {
+  width: 75%;
+  position: absolute;
+  left: 13%;
+  margin: auto;
+  display: none;
+}
+
+.slide:first-child {
+  display: block;
+}
+
+.slide__image {
+  width: 100%;
+}
+
+.project__slide-prev {
+
+}
+
+.project_-slide-next {
+  
+}
+
+// .project__slide-container {
+//   position: relative;
+//   overflow: hidden;
+//   height: 300px;
+// }
+//
+// .project__slide-group {
+//   width: 100%;
+//   height: 100%;
+//   position: relative;
+// }
+//
+// .slide {
+//   width: 100%;
+//   height: 100%;
+//   display: none;
+//   position: absolute;
+// }
+//
+// .slide:first-child {
+//   display: block;
+// }
+
+
+//
+// figure {
+//   margin: 0 auto;
+//   padding: 1rem 0;
+//   width: 17rem;
+//   background-color: tint($highlightColor, 80%);
+//   color: $darkColor;
+//   @media screen and ($tablet), screen and ($laptop), screen and ($desktop) {
+//     width: 33rem;
+//   }
+// }
+//
+// .project {
+//   // @include row();
+//   @include outer-container;
+// }
+//
+// .project__description {
+//   @include span-columns(12);
+//   @media screen and ($tablet), screen and ($laptop), screen and ($desktop) {
+//     @include span-columns(4);
+//   }
+// }
+//
+// .project__image-container {
+//   @include span-columns(12);
+//   @media screen and ($tablet), screen and ($laptop), screen and ($desktop) {
+//     @include span-columns(8);
+//     @include omega();
+//   }
+//   .project__image {
+//     width: 100%;
+//   }
+// }
 
 
 
