--- a/scss/partials/projects.scss
+++ b/scss/partials/projects.scss
@@ -10,39 +10,92 @@
   @include outer-container;
 }
 
-.project__slide-container {
-  position: relative;
+.project__description {
+  //@include span-columns(12);
+  @include row();
+  color: $darkColor;
 }
 
-.project__slide-group {
-  width: 100%;
-  height: 100%;
-  position: relative;
+.bullets {
+  @include span-columns(12);
+  margin: 0 0 1rem 0;
+
+  padding: 0;
+  text-align: center;
+
+  .bullet {
+    list-style-type: none;
+    display: inline-block;
+
+    .fa {
+      width: 3rem;
+      position: relative;
+      top: 0.2rem;
+      color: $highlightColor;
+    }
+    h3 {
+      display: inline-block;
+      color: $highlightColor;
+    }
+  }
+
 }
 
-.slide {
-  width: 75%;
-  position: absolute;
-  left: 13%;
-  margin: auto;
+
+.project__description-image--container {
+  @include span-columns(12);
+  position: relative;
+  // @media screen and ($tablet), screen and ($laptop), screen and ($desktop) {
+  //   @include span-columns(8);
+  //   @include omega();
+  // }
+  .project__description-image {
+    width: 100%;
+  }
+}
+
+.hover__hidden {
   display: none;
 }
 
-.slide:first-child {
+.hover__visible:hover > div {
+  position: absolute;
   display: block;
 }
 
-.slide__image {
-  width: 100%;
-}
-
-.project__slide-prev {
-
-}
-
-.project_-slide-next {
-  
-}
+// .project__slide-container {
+//   position: relative;
+// }
+//
+// .project__slide-group {
+//   width: 100%;
+//   height: 100%;
+//   position: relative;
+// }
+//
+// .slide {
+//   width: 75%;
+//   position: absolute;
+//   left: 13%;
+//   margin: auto;
+//   display: none;
+// }
+//
+// .slide:first-child {
+//   display: block;
+// }
+//
+// .slide__image {
+//   width: 100%;
+// }
+//
+// .project__slide-prev {
+//
+// }
+//
+// .project_-slide-next {
+//
+// }
 
 // .project__slide-container {
 //   position: relative;
